test_outputs/connlist/exposure_test_with_anp_2_w_np_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Allowed) due to the system default (Allow all)
		INGRESS DIRECTION (Denied)
			[NP] hello-world/expose-app-a // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Denied)
			[NP] hello-world/expose-app-a // Egress (captured but not selected by any Egress rule)
		INGRESS DIRECTION (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Denied)
			[NP] hello-world/expose-app-a // Egress (captured but not selected by any Egress rule)
		INGRESS DIRECTION (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Allowed) due to the system default (Allow all)
		INGRESS DIRECTION (Denied)
			[NP] hello-world/expose-app-a // Ingress (captured but not selected by any Ingress rule)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment]
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	[namespace with {conformance-house=gryffindor}]/[all pods] : All Connections
hello-world/workload-a[Deployment] 	=> 	[namespace with {conformance-house=slytherin}]/[all pods] : TCP 80
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	[namespace with {conformance-house=gryffindor}]/[all pods] : All Connections
hello-world/workload-a[Deployment] 	<= 	[namespace with {conformance-house=slytherin}]/[all pods] : TCP 80
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections
